--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "./dist/index.js",
-        "use": "@now/node"
+        "src": "./src/index.ts",
+        "use": "@vercel/node"
       }
     ],
     "routes": [
         {
-          "src": "./dist/(.*)",
-          "dest": "./dist/index.js"
+          "src": "./src/(.*)",
+          "dest": "./src/index.ts"
         }
       ]
   }
