--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
     ],
     "routes": [
         {
-          "src": "./src/(.*)",
-          "dest": "./src/index.ts"
+          "src": "/(.*)",
+          "dest": "/"
         }
       ]
   }
